@@ -1,3 +1,9 @@
+Fri Oct 27 22:15:33 1995  Theodore Y. Ts'o  <tytso@dcl>
+
+	* get_in_tkt.c (krb5_get_in_tkt): Extensive reworking of the
+		structure of this file to make it possible to support
+		preauthentication.
+
 Mon Oct 23 17:08:59 1995  Theodore Y. Ts'o  <tytso@dcl>
 
 	* in_tkt_pwd.c (krb5_get_in_tkt_with_password): Fix to properly
